[package]
name = "locket"
version = "0.1.0"
authors = ["Krithik Rao <krdevmail@gmail.com>"]
edition = "2018"

[dependencies]
clap = "3.0.0-beta.2"
openssl = { version = "0.10", features = ["vendored"] }
git2 = "0.13.14"
dialoguer = "0.7.1"
git-url-parse = "0.3.0"
webbrowser = "0.5.5"
toml = "0.5"
serde = { version = "1.0", features = ["derive"] }

